--- a/src/Front-End-Component/Navbar/Navbar.css
+++ b/src/Front-End-Component/Navbar/Navbar.css
@@ -1,102 +1,27 @@
 
   /********** Template CSS **********/
 :root {
-  --primary: #2d9e00;
+  --primary: #ffffff;
   --secondary: #FF6922;
   --light: #EFFDF5;
-  --dark: #0E2E50;
+  --dark: #ff7e06;
 }
 
-
-/*** Navbar ***/
-.nav-bar {
-  position: relative;
-  margin-top: 45px;
-  padding: 0 3rem;
-  transition: .5s;
-  z-index: 9999;
-}
-
-.nav-bar.sticky-top {
-  position: sticky;
-  padding: 0;
-  z-index: 9999;
-}
-
-.navbar {
-  box-shadow: 0 0 30px rgba(0, 0, 0, .08);
-}
-
-.navbar .dropdown-toggle::after {
-  border: none;
-  content: "\f107";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  vertical-align: middle;
-  margin-left: 5px;
-  transition: .5s;
-}
-
-.navbar .dropdown-toggle[aria-expanded=true]::after {
-  transform: rotate(-180deg);
-}
-
-.navbar-light .navbar-nav .nav-link {
+.Nav-Link {
  
- 
-  color: #FFFFFF;
-  font-size: 15px;
- 
-  outline: none;
+ margin-left: 2px;
+ margin-right: 2px;
+ text-decoration: none;
+  color: #000000;
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
+.Nav-Link:hover,
+.Nav-Link.active {
+  background-color: rgb(8, 157, 73);
   color: var(--primary);
+  background-color: rgb(8, 157, 73);
+  border-radius: 7px;
 }
 
-@media (max-width: 991.98px) {
-  .nav-bar {
-      margin: 0;
-      padding: 0;
-  }
 
-  .navbar-light .navbar-nav .nav-link  {
-      margin-right: 0;
-      padding: 10px 0;
-  }
 
-  .navbar-light .navbar-nav {
-      border-top: 1px solid #EEEEEE;
-  }
-}
-
-.navbar-light .navbar-brand {
-  height: 75px;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: var(--dark);
- 
-}
-
-@media (min-width: 992px) {
-  .navbar .nav-item .dropdown-menu {
-      display: block;
-      top: 100%;
-      margin-top: 0;
-      transform: rotateX(-75deg);
-      transform-origin: 0% 0%;
-      opacity: 0;
-      visibility: hidden;
-      transition: .5s;
-      
-  }
-
-  .navbar .nav-item:hover .dropdown-menu {
-      transform: rotateX(0deg);
-      visibility: visible;
-      transition: .5s;
-      opacity: 1;
-  }
-}
