--- a/src/pages/Back-End/Dashbord/Dashbord.css
+++ b/src/pages/Back-End/Dashbord/Dashbord.css
@@ -7,8 +7,8 @@ body, ul {
   
   /* Style the sidebar */
   .sidebar {
-    background-color: #333;
-    color: #fff;
+    background-color: #e9e9e9;
+    color: #000000;
     width: 300px;
     height: 100%;
     position: fixed;
@@ -48,7 +48,7 @@ body, ul {
   
   .sidebar a {
     text-decoration: none;
-    color: #fff;
+    color: #000000;
     display: flex;
     align-items: center;
     padding: 10px 20px;
